k8s/04-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkjs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mkjs-app
  template:
    metadata:
      labels:
        app: mkjs-app
    spec:
      containers:
        - name: app
          image: ghcr.io/dannyeclisson/gces-projetoindividual-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 55555
          readinessProbe:
            tcpSocket:
              port: 55555
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 55555
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: mkjs-app
  ports:
    - name: http
      port: 55555
      targetPort: 55555
